--- a/public/index.html
+++ b/public/index.html
@@ -171,7 +171,7 @@
         /* Responsive adjustments */
         @media (max-width: 768px) {
             .hero-section {
-                height: 280px; /* Further reduced for mobile */
+                height: 300px; /* Further reduced for mobile */
                 padding: 2rem 0;
             }
             .hero-text h1 {
@@ -302,30 +302,45 @@
         </div>
     </section>
 
-    <section id="admission" class="py-5">
-        <div class="container fade-up">
-            <h2 class="text-center mb-4">Book for Admission (Halqatu Ibadurrahman)</h2>
-            <div class="row justify-content-center">
-                <div class="col-lg-8">
-                    <form class="p-4 rounded shadow-sm bg-white">
-                        <div class="mb-3">
-                            <label for="name" class="form-label">Your Name</label>
-                            <input type="text" class="form-control" id="name" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="email" class="form-label">Your Email</label>
-                            <input type="email" class="form-control" id="email" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="message" class="form-label">Your Message</label>
-                            <textarea class="form-control" id="message" rows="4"></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-primary w-100">Submit</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </section>
+   <section id="admission" class="py-5">
+  <div class="container fade-up">
+    <h2 class="text-center mb-4">Book Tahfiz for Admission (Halqatu Ibadurrahman)</h2>
+    <div class="row justify-content-center">
+      <div class="col-lg-8">
+        <form class="p-4 rounded shadow-sm bg-white">
+          
+          <div class="mb-3">
+            <label for="name" class="form-label">Your Name</label>
+            <input type="text" class="form-control" id="name" required>
+          </div>
+
+          <div class="mb-3">
+            <label for="email" class="form-label">Your Email</label>
+            <input type="email" class="form-control" id="email" required>
+          </div>
+
+          <div class="mb-3">
+            <label for="phone" class="form-label">Your Phone Number</label>
+            <input type="tel" class="form-control" id="phone" required>
+          </div>
+
+          <div class="mb-3">
+            <label for="address" class="form-label">Your Address</label>
+            <input type="text" class="form-control" id="address" required>
+          </div>
+
+          <div class="mb-3">
+            <label for="message" class="form-label">Your Message</label>
+            <textarea class="form-control" id="message" rows="4"></textarea>
+          </div>
+
+          <button type="submit" class="btn btn-primary w-100">Submit</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</section>
+
 
     <footer id="contact" class="bg-dark text-white py-5">
         <div class="container">
